objects/Forecast_Billing__c.object
<CustomObject>
    <fields>
        <fullName>Account_From_BBB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account From BBB</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Forecast Billings</relationshipLabel>
        <relationshipName>Forecast_Billings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Filled by batch. This will have to have the sum of the quarter taken from the related Yearly record.</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Forecast_Snapshot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval Forecast Snapshot</label>
        <referenceTo>Forecast_Snapshot__c</referenceTo>
        <relationshipLabel>Forecast Billings</relationshipLabel>
        <relationshipName>Forecast_Billings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_Type__c</fullName>
        <description>Copied from Yearly Booking/Billing record</description>
        <label>Bill Type</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Part__c</fullName>
        <label>Customer Part</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Direct_Amount__c</fullName>
        <formula>IF( Bill_Type__c = &apos;Direct&apos;, Amount__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Duplicate_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Duplicate Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplicate_Records__c</fullName>
        <description>CSV field containing all duplicate billing rec-ords. Duplicates are to be matched with Part number, account ID, and date field</description>
        <label>Duplicate Records</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Load_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup to load status to retrieve fiscal working days etc for reporting</description>
        <label>Load Status</label>
        <referenceTo>Load_Status__c</referenceTo>
        <relationshipLabel>Forecast Billings</relationshipLabel>
        <relationshipName>Forecast_Billings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Forecast__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Forecast</label>
        <referenceTo>Opportunity_Forecast__c</referenceTo>
        <relationshipLabel>Forecast Billings</relationshipLabel>
        <relationshipName>Forecast_Billings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To be populated for engineering parts.</description>
        <label>Opportunity Part</label>
        <referenceTo>Opportunity_Part__c</referenceTo>
        <relationshipLabel>Forecast Billings</relationshipLabel>
        <relationshipName>Forecast_Billings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POS_Amount__c</fullName>
        <formula>IF( Bill_Type__c  = &apos;POS&apos;, Amount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>POS Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reseller__c</fullName>
        <label>Reseller</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Won_Forecast_Snapshot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Won Forecast Snapshot</label>
        <referenceTo>Forecast_Snapshot__c</referenceTo>
        <relationshipLabel>Forecast Billings (Won Forecast Snapshot)</relationshipLabel>
        <relationshipName>Forecast_Billings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>acc_opp_part__c</fullName>
        <formula>Opportunity_Part__r.Opportunity__r.Account.Id &amp; &quot;_&quot; &amp; Opportunity_Part__r.Opportunity__r.Id &amp; &quot;_&quot; &amp;  Opportunity_Part__r.Part__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>acc_opp_part</label>
        <type>Text</type>
    </fields>
    <label>Forecast Billing</label>
    <nameField>
        <label>Forecast Billing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecast Billings</pluralLabel>
    <recordTypes>
        <fullName>Engineering</fullName>
        <active>true</active>
        <label>Engineering</label>
    </recordTypes>
    <recordTypes>
        <fullName>Regular</fullName>
        <active>true</active>
        <label>Regular</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>